--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/index.css" media="all">
     <link rel="stylesheet" href="estilos/media-queries-all.css" media="screen">
+    <link rel="stylesheet" href="estilos/media-queries-landscape.css" orientation="landscape">
     <title>Calculadora</title>
 </head>
 
